# resume

./: .gitignore  Main.hs  Makefile  README.md  Resume.hs  ResumeData.hs  TeX.hs  ap-resume.txt  build-linux.sh  build-win.bat  chicv.typ  fontawesome.typ  main.typ  pub.bib  resume-cn.tex  resume-elab.typ  resume-zh.typ  resume.cabal  resume.cls  resume.tex  resume.typ  update.cmd  update.sh
deprecated/: resume-ap.tex  resume-cn-old.tex  resume-old.md  resume-old.tex
latex/: Makefile  fontawesome.sty  pub.bib  resume-cn.xdv  resume-elab.xdv  resume.cls  resume.xdv
